tests/standalone-tests/failing/luau-inline-ifs.lua
-- this is an example of syntax accepted by robox's
-- "luau" fork which must be rejected by a validator
-- targetting mainline lua.
local maxValue = if a > b then a else b
